src/gateway/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway-backend
        resources: {}
        image: "<image url>"
        ports:
        - containerPort: 8001
