src/gateway/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30000
